# pylibtemplate

./: CHANGELOG.md  README.md  config.yml.j2  cookiecutter.json  requirements.txt
hooks/: post_gen_project.sh
{{cookiecutter.project_name}}/: .gitignore  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  README.md  setup.cfg  setup.py  sonar-project.properties
{{cookiecutter.project_name}}/requirements/: dev.txt  publish.txt
{{cookiecutter.project_name}}/scripts/: upload_to_registry.sh
{{cookiecutter.project_name}}/tests/: aux.py
{{cookiecutter.project_name}}/tests/integration/: conftest.py
{{cookiecutter.project_name}}/{{cookiecutter.libname}}/: __init__.py  auxiliary.py
