[bumpversion]
allow_dirty = true
current_version = 0.1.0-rc1
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<candidate>rc\d+))?
serialize =
	{major}.{minor}.{patch}-{candidate}
	{major}.{minor}.{patch}

[bumpversion:file:{{cookiecutter.libname}}/__init__.py]

[bumpversion:file:sonar-scanner.properties]

[bdist_wheel]
universal = 1

[metadata]
description-file = README.md

[tox]
envlist = py37

[testenv]
deps = pytest
	pytest-cov
commands = pytest -m 'not integration' {posargs}

[tool:pytest]
junit_family = xunit2
junit_suite_name = {{cookiecutter.libname}}
addopts = 
	-m '"not integration"'
	--cov-append
	--cov={{cookiecutter.libname}}
	--cov-config=setup.cfg
	--cov-report term --cov-report xml --cov-report html
	--junitxml=.coverage-reports/xunit.xml
python_paths = .
python_files = tests.py test_*.py *_tests.py[pytest]
norecursedirs = 
	.git
	.tox
	docs
	env
	venv
markers = 
	integration: tests hitting real APIs

[coverage:run]
source = {{cookiecutter.libname}}
omit = *tests*,
data_file = .coverage-reports/.coverage

[coverage:report]
show_missing = true

[coverage:xml]
output = .coverage-reports/coverage.xml

[coverage:html]
directory = .coverage-reports/html

[flake8]
max-line-length = 100
exclude = 
	.tox,
	.git,
	.idea,
	docs,
	*.egginfo
	venv*
	env*


[pylint]
load-plugins = pylint_common, pylint_plugin_utils
output-format = colorized
disable = missing-docstring, W1202,
max-line-length = 100
max-module-lines = 1000
max-parents = 13
generated-members = REQUEST,acl_users,aq_parent,"[a-zA-Z]+_set{1,2}",save,delete

